src/tests/snapshots/cclv__tests__view_snapshots__bug_number_key_1_should_select_main.snap
---
source: src/tests/view_snapshots.rs
expression: output
---
┌Conversations─────────────────────────────────────────────────────────────────────────────────────┐
│ Main │ toolu_subagent_001 │ toolu_subagent_002                                                   │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
┌Main [Opus] (2 entries)───────────────────────────────────────────────────────────────────────────┐
││  1 Help me with this task                                                                       │
│                                                                                                  │
││  2 I'll spawn subagents to help.                                                                │
│── ↓10/10 ↑15/15 / $0.00 | Context: 25 (0%) ──                                                    │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
[LIVE] Wrap: On | q: Quit | ?: Help | /: Search | s: Stats | Tab: Cycle panes
