src/tests/snapshots/cclv__tests__view_snapshots__bug_session_tab_nav_after_second_tab.snap
---
source: src/tests/view_snapshots.rs
expression: after_second_tab.clone()
---
┌Conversations─────────────────────────────────────────────────────────────────┐
│ Main │ subagent-a                                                            │
└──────────────────────────────────────────────────────────────────────────────┘
┌Main [Opus] (2 entries)───────────────────────────────────────────────────────┐
││  1 Session 1 user message                                                   │
│                                                                              │
││  2 Session 1 main agent response                                            │
│── ↓10/10 ↑15/15 / $0.00 | Context: 25 (0%) ──                                │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
[LIVE] │ Session 1/2 │ Wrap: On | q: Quit | ?: Help | /: Search
