src/tests/snapshots/cclv__tests__view_snapshots__bug_session_tab_nav_initial.snap
---
source: src/tests/view_snapshots.rs
expression: initial
---
┌Conversations─────────────────────────────────────────────────────────────────┐
│ Main                                                                         │
└──────────────────────────────────────────────────────────────────────────────┘
┌Main [Opus] (2 entries)───────────────────────────────────────────────────────┐
││  1 Session 2 user message                                                   │
│                                                                              │
││  2 Session 2 main agent response                                            │
│── ↓10/10 ↑15/15 / $0.00 | Context: 25 (0%) ──                                │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
[LIVE] │ Session 2/2 │ Wrap: On | q: Quit | ?: Help | /: Search
