src/tests/snapshots/cclv__tests__view_snapshots__bug_subagent_blank_after_switch.snap
---
source: src/tests/view_snapshots.rs
expression: after_session_change.clone()
---
┌Conversations─────────────────────────────────────────────────────────────────┐
│ Main │ subagent-a                                                            │
└──────────────────────────────────────────────────────────────────────────────┘
[LIVE] │ Session 1/2 │ Wrap: On | q: Quit | ?: Help | /: Search
