src/tests/snapshots/cclv__tests__view_snapshots__bug_subagent_blank_before_switch.snap
---
source: src/tests/view_snapshots.rs
expression: on_subagent
---
┌Conversations─────────────────────────────────────────────────────────────────┐
│ Main │ subagent-b                                                            │
└──────────────────────────────────────────────────────────────────────────────┘
┌subagent-b [Sonnet] (1 entries)───────────────────────────────────────────────┐
││  1 Session 2 subagent message                                               │
│── ↓5/5 ↑20/20 / $0.00 | Context: 25 (0%) ──                                  │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
[LIVE] │ Session 2/2 │ Wrap: On | q: Quit | ?: Help | /: Search
