src/tests/snapshots/cclv__tests__view_snapshots__bug_subagent_expand_before.snap
---
source: src/tests/view_snapshots.rs
expression: output_before
---
┌Conversations─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│ Main Agent │ toolu_013heDTEdCz8mvrxEGezZteB │ toolu_014WRyZPPnVxekx3ACaBtEz8 │ toolu_01UcpbyRyV4mTttzBQZ2tjiX                                                                                        │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
┌Subagent toolu_013heDTEdCz8mvrxEGezZteB [Haiku] (79 entries)──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
││  1 ## Review Task                                                                                                                                                                                   │
││                                                                                                                                                                                                     │
││    Review implementation for task: cclv-07v.8.12 - Export search-aware rendering for snapshot testing                                                                                               │
││    (+42 more lines)                                                                                                                                                                                 │
│                                                                                                                                                                                                      │
││  2 🔧. Tool: Bash                                                                                                                                                                                    │
││      {                                                                                                                                                                                              │
││        "command": "git diff HEAD~1 HEAD --name-only",                                                                                                                                               │
││        "description": "Show files changed in recent commit"                                                                                                                                         │
││      }                                                                                                                                                                                              │
│── 3 in / 1 out / $0.03 | Context: 16.8k (8%) ──                                                                                                                                                      │
││  3 .beads/issues.jsonl                                                                                                                                                                              │
││    src/view/mod.rs                                                                                                                                                                                  │
││    tests/snapshots/view_snapshots__message_with_search_highlighting.snap                                                                                                                            │
││    tests/view_snapshots.rs                                                                                                                                                                          │
│                                                                                                                                                                                                      │
││  4 🔧  Tool: Read                                                                                                                                                                                    │
││      {                                                                                                                                                                                              │
││        "file_path": "/home/claude/cclv/src/view/mod.rs",                                                                                                                                            │
││        "limit": 100                                                                                                                                                                                 │
││      }                                                                                                                                                                                              │
│── 6 in / 1 out / $0.03 | Context: 33.8k (16%) ──                                                                                                                                                     │
││  5 🔧  Tool: Read                                                                                                                                                                                    │
││      {                                                                                                                                                                                              │
││        "file_path": "/home/claude/cclv/tests/view_snapshots.rs",                                                                                                                                    │
││        "limit": 550                                                                                                                                                                                 │
││      }                                                                                                                                                                                              │
│── 6 in / 1 out / $0.03 | Context: 50.8k (25%) ──                                                                                                                                                     │
││  6      1→//! TUI rendering and terminal management (impure shell)                                                                                                                                  │
││         2→                                                                                                                                                                                          │
││         3→mod help;                                                                                                                                                                                 │
││    (+101 more lines)                                                                                                                                                                                │
│                                                                                                                                                                                                      │
││  7      1→//! Snapshot tests for key view components                                                                                                                                                │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
[LIVE] Wrap: On | q: Quit | ?: Help | /: Search | s: Stats | Tab: Cycle panes
